--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install requirements
         run: |
-          Python -m pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install robotFramework
           pip install robotFramework-seleniumLibrary
           pip install robotFramework-requests
