--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
   gitleaks:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Gitleaks
         # You may pin to the exact commit or the version.
         # uses: gitleaks/gitleaks-action@5425999620c418539c61a8143f29e346d5f6cf08
