--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Start Test
         run: |
           python -m robot -i api test/RobotFrameWork/tc.robot
+
   postman:
     name: Postman Tests
     runs-on: ubuntu-latest
@@ -36,3 +37,15 @@ jobs:
         # You may pin to the exact commit or the version.
         # uses: gitleaks/gitleaks-action@5425999620c418539c61a8143f29e346d5f6cf08
         uses: gitleaks/gitleaks-action@v2.2.0
+
+  k6LoadTest:
+    name: k6 Load Testing
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: k6 Load Test
+        uses: grafana/k6-action@v0.2.0
+        with:
+          filename: ${{ github.workspace }}/test/k6/loadtest.js
+          flags: --vus 50 --duration 10s
