--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,4 +73,25 @@ jobs:
           npm install
           npm update
           npm test
+  robotFramework:
+    needs: [gitleaks, postman]
+    name: RF- FrontEnd
+    runs-on: ubuntu-latest
+    steps:
+      - name: Code Checkout
+        uses: actions/checkout@v2
+      - name: Run Robot
+        run: |
+          docker run --shm-size=1g \
+          -v ${{ github.workspace }}/test/playwright:/opt/robotframework/reports:Z \
+          -v ${{ github.workspace }}/test/playwright:/opt/robotframework/tests:Z \
+          -e BROWSER=chrome \
+          --user=1001:1001 \
+          ppodgorsek/robot-framework:latest
+
+
+
+
+
+
 
